--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "admin-client",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://philip-clark.github.io/blog-api-admin-client",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
     "dotenv": "^16.4.1",
+    "gh-pages": "^6.1.1",
     "he": "^1.2.0",
     "moment": "^2.30.1",
     "quill": "^1.3.6",
@@ -23,7 +25,8 @@
     "start": "set PORT=3001 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
