--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 REACT_APP_API_URL =https://blog-api-server-production.up.railway.app/api
-REACT_APP_SERVER_URL =https://blog-api-server-production.up.railway.app/
+REACT_APP_SERVER_URL =https://blog-api-server-production.up.railway.app
