--- a/package.json
+++ b/package.json
@@ -18,17 +18,17 @@
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
-    "serve": "^14.2.1",
     "universal-cookie": "^7.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "set PORT=3001 && react-scripts start",
+    "dev": "set PORT=3001 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "start": "serve build -s -n -p $PORT"
   },
   "eslintConfig": {
     "extends": [
